// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea renders correctly 1`] = `
<div
  className="element-container css-0"
>
  <textarea
    className="element"
    name="Name"
  />
  <span
    className="after-form-element"
  />
</div>
`;

exports[`Textarea renders required correctly 1`] = `
<div
  className="element-container css-0"
>
  <textarea
    className="element"
    name="Name"
    required={true}
  />
  <span
    className="after-form-element"
  />
</div>
`;
